fix: graph z-index first

--- a/src/site/styles/digital-garden-base.scss
+++ b/src/site/styles/digital-garden-base.scss
@@ -25,7 +25,6 @@ img {
     position: relative;
     min-width: 700px;
     max-width: 700px;
-    z-index: 5;
     @media screen and (max-width: 1630px) {
         margin-top: 75px;
     }
